updated notebook and html docs

--- a/pyecoop/notebook/ESR_Test.ipynb
+++ b/pyecoop/notebook/ESR_Test.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "gist_id": "11072947",
   "name": "",
-  "signature": "sha256:90bc1786339502467a8fff74280b13ae03256e11fef4c314f87992f7e0677025"
+  "signature": "sha256:fdcd98b339d0b49aa52c76d25be2e3554e8f546e611d52fcfed6e1eb38530b99"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +19,28 @@
       "from ecoop.ecooprovdict import ecooProvDict\n",
       "from ecoop.printer import openDocument, closeDocument, addSection, addSubSection, addFigure\n",
       "from ecoop.splashtemplate import makeSplash\n",
-      "from ecoop.splashdict import splash"
+      "from ecoop.splashdict import splash\n",
+      "from ecoop.epimagic import *"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#ecooProvDict"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%matplotlib inline"
      ],
      "language": "python",
      "metadata": {},
@@ -69,7 +89,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%file {ID}/climate_forcing.txt\n",
+      "%%writefileref {ID}/climate_forcing.txt epinux\n",
       "Climate patterns over the North Atlantic are important drivers of oceanographic conditions and ecosystem states. \n",
       "Steadily increasing atmospheric carbon dioxide levels can not only affect climate on global and regional scales \n",
       "but alter critical aspects of ocean chemistry. Here, we describe the atmospheric forcing mechanisms related \n",
@@ -102,7 +122,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%file {ID}/nao.txt\n",
+      "%%writefileref {ID}/nao.txt epinux\n",
       "Climate and weather over the North Atlantic are strongly influenced by the relative strengths \n",
       "of two large-scale atmospheric pressure cells -- the Icelandic Low and the Azores High [4]. \n",
       "As the relative strengths of these two pressure systems vary, characteristic patterns of temperature, precipitation, and wind fields are observed. \n",
@@ -128,7 +148,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "naodata = cfd.nao_get(save=ID, csvout=\"nao.csv\")"
+      "naodata = cfd.nao_get(save=ID, csvout=\"nao.csv\", prov=True)"
      ],
      "language": "python",
      "metadata": {},
@@ -142,7 +162,7 @@
       "naodata = cfd.nao_get(save=ID, csvout=\"nao.csv\")\n",
       "cfp.plot_index(name='NAO_lowess', xticks=10, xticks_fontsize=10, \n",
       "               data=naodata, nb='y', scategory='lowess', frac=1./6, it=6, \n",
-      "               output=ID, dateformat=True, figsave=\"nao.png\")"
+      "               output=ID, dateformat=True, figsave=\"nao.png\", prov=True)"
      ],
      "language": "python",
      "metadata": {},
@@ -152,7 +172,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from bokeh import pyplot"
+      "#from bokeh import pyplot"
      ],
      "language": "python",
      "metadata": {},
@@ -163,7 +183,7 @@
      "collapsed": false,
      "input": [
       "time.sleep(1)\n",
-      "nb_name = 'ESR_Climate_Forcing_PDF.ipynb'\n",
+      "nb_name = 'ESR_Test_rdf.ipynb'\n",
       "util.save_notebook(ID, nb_name)\n",
       "time.sleep(1)\n",
       "\n",
@@ -210,7 +230,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%file {ID}/amo.txt\n",
+      "%%writefileref {ID}/amo.txt epinux\n",
       "Multidecadal patterns in sea surface temperature (SST) in the North Atlantic are represented by the Atlantic Multidecadal Oscillation (AMO) index. \n",
       "The AMO signal is based on spatial patterns in SST variability after removing the effects of anthropogenic forcing on temperature, \n",
       "revealing natural long term cycles in SST.\n",
@@ -235,7 +255,7 @@
       "amodata = cfd.amo_get(save=ID, csvout=\"amo.csv\")\n",
       "cfp.plot_index(name='AMO_lowess', xticks=10, xticks_fontsize=10, \n",
       "               data=amodata, nb='y', scategory='lowess', frac=1./6, it=6, \n",
-      "               output=ID, dateformat=True, figsave=\"amo.png\")"
+      "               output=ID, dateformat=True, figsave=\"amo.png\", prov=True)"
      ],
      "language": "python",
      "metadata": {},
@@ -246,7 +266,7 @@
      "collapsed": false,
      "input": [
       "time.sleep(1)\n",
-      "nb_name = 'ESR_Climate_Forcing_PDF.ipynb'\n",
+      "nb_name = 'ESR_Test_rdf.ipynb'\n",
       "util.save_notebook(ID, nb_name)\n",
       "time.sleep(1)\n",
       "\n",
@@ -369,7 +389,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "PDF available at http://144.76.93.231/shared/test.pdf"
+      "PDF available at http://www.epinux.com/shared/test.pdf"
      ]
     },
     {
@@ -427,7 +447,8 @@
      "input": [
       "import getpass\n",
       "user = getpass.getuser()\n",
-      "from ecoop import version"
+      "from ecoop import version\n",
+      "from ecoop.userdict import ecoopuser"
      ],
      "language": "python",
      "metadata": {},
@@ -460,6 +481,16 @@
      "collapsed": false,
      "input": [
       "author.keys()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "author"
      ],
      "language": "python",
      "metadata": {},
