adde new notebooks

--- a/pyecoop/notebook/ESR_Test.ipynb
+++ b/pyecoop/notebook/ESR_Test.ipynb
@@ -1,13 +1,44 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fdcd98b339d0b49aa52c76d25be2e3554e8f546e611d52fcfed6e1eb38530b99"
+  "signature": "sha256:a9f8a933747a6e467ba11147b6a491dfdc4c0b41773dfab37ebc147e0e048cec"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from ecoop.prov import *\n",
+      "from datetime import datetime as dt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "prov = initProv()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "prov['http://www.w3.org/ns/prov#startedAtTime'] = provStartedAtTime(dt.utcnow().toordinal())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -30,7 +61,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#ecooProvDict"
+      "try :\n",
+      "    from os import environ\n",
+      "    ecoop_username = environ['ecoop_username']\n",
+      "except :\n",
+      "    print \"no username provided\"\n",
+      "    ecoop_username = \"anonymous\"\n",
+      "# note : \n",
+      "# when no username is provided we can still assign the username to the current unix user with :\n",
+      "# import getpass\n",
+      "# ecoop_username = getpass.getuser()"
      ],
      "language": "python",
      "metadata": {},
@@ -89,7 +129,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%writefileref {ID}/climate_forcing.txt epinux\n",
+      "%%writefileref {ID}/climate_forcing.txt {ecoop_username}\n",
       "Climate patterns over the North Atlantic are important drivers of oceanographic conditions and ecosystem states. \n",
       "Steadily increasing atmospheric carbon dioxide levels can not only affect climate on global and regional scales \n",
       "but alter critical aspects of ocean chemistry. Here, we describe the atmospheric forcing mechanisms related \n",
@@ -122,7 +162,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%writefileref {ID}/nao.txt epinux\n",
+      "%%writefileref {ID}/nao.txt {ecoop_username}\n",
       "Climate and weather over the North Atlantic are strongly influenced by the relative strengths \n",
       "of two large-scale atmospheric pressure cells -- the Icelandic Low and the Azores High [4]. \n",
       "As the relative strengths of these two pressure systems vary, characteristic patterns of temperature, precipitation, and wind fields are observed. \n",
@@ -230,7 +270,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%writefileref {ID}/amo.txt epinux\n",
+      "%%writefileref {ID}/amo.txt {ecoop_username}\n",
       "Multidecadal patterns in sea surface temperature (SST) in the North Atlantic are represented by the Atlantic Multidecadal Oscillation (AMO) index. \n",
       "The AMO signal is based on spatial patterns in SST variability after removing the effects of anthropogenic forcing on temperature, \n",
       "revealing natural long term cycles in SST.\n",
@@ -379,7 +419,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!cp {ID}/test.pdf /var/www/shared/test.pdf"
+      "!cp {ID}/test.pdf /var/www/html/shared/test.pdf"
      ],
      "language": "python",
      "metadata": {},
@@ -445,10 +485,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import getpass\n",
-      "user = getpass.getuser()\n",
-      "from ecoop import version\n",
-      "from ecoop.userdict import ecoopuser"
+      "prov['http://www.w3.org/ns/prov#endedAtTime'] = provStartedAtTime(dt.utcnow().toordinal())"
      ],
      "language": "python",
      "metadata": {},
@@ -458,9 +495,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "git_revision = version.git_revision\n",
-      "short_version= version.short_version\n",
-      "author = ecoopuser[user]"
+      "prov[\"http://www.w3.org/ns/prov#wasAssociatedWith\"] = provWasAssociatedWith(\"massimo patrick\")"
      ],
      "language": "python",
      "metadata": {},
@@ -470,7 +505,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "git_revision, short_version"
+      "prov[\"http://www.w3.org/ns/prov#used\"] = provWasAssociatedWith(\"ecoop_software ipython_software\")"
      ],
      "language": "python",
      "metadata": {},
@@ -480,7 +515,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "author.keys()"
+      "prov"
      ],
      "language": "python",
      "metadata": {},
@@ -490,7 +525,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "author"
+      "from IPython.core.display import Javascript"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Javascript(\"IPython.notebook.metadata['ecoop_prov'] = %s\" % prov)"
      ],
      "language": "python",
      "metadata": {},
